# nesteddotdict

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  publish.yml
nesteddotdict/: __init__.py  dotdict.py
tests/: test_dotdict.py
